# Aristeus_Kochapp

./: .gitignore  CLAUDE.md  Idee.md  PLAN.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  done.txt  dryrun.txt  dryrun2.txt  dryrun3.txt  dryrun_output.txt  final.txt  final_verify.txt  fix_recipe_metadata.py  fix_run.txt  pyproject.toml  recipe_ingr.txt  recipe_schema.txt  recipes_dump.txt  recipes_sample.txt  single_check.txt  test_batch.txt  verify.txt  verify2.txt  verify3.txt
backend/alembic/: env.py
backend/alembic/versions/: 04575b18ba54_init_health_pings.py  3d1466261c04_phase2_brochures_offers.py  a1b2c3d4e5f6_phase3_plans_ai.py  a2b3c4d5e6f7_dish_image_portion_override.py  b1c2d3e4f5a6_brochure_web_url.py  b3c4d5e6f7a8_saved_recipes.py  b59ad6b5be07_phase1_auth.py  c2d3e4f5a6b7_shopping_item_price.py  c4d5e6f7a8b9_saved_recipes_origin.py  d4e5f6a7b8c9_recipe_catalog.py  e5f6a7b8c9d0_recipe_meal_type.py  f6a7b8c9d0e1_plan_wish_text.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py
backend/app/ai/: client.py  learned_prefs.py  pipeline.py  prompts.py  schemas.py  validators.py
backend/app/routers/: admin.py  auth.py  plans.py  profile.py  recipes.py  stores.py
backend/app/services/: chefkoch_scraper.py  dish_images.py  email.py  kaufda.py  keyword_filter.py  recipe_matcher.py  scheduler.py  (+1 more)
backend/tests/: conftest.py  test_auto_complete.py  test_recipe_import_and_planning.py  test_recipe_photo_import.py  test_recipes_dedupe.py  test_round_quantity.py  test_savings.py  test_shopping_list.py
(+44 files in other folders)
